# report-writer

./: .env.production  .gitignore  AGENTS.md  DEPLOY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  LICENSE  README.md  VERCEL_SETUP.md  package-lock.json  package.json  playwright.config.ts  test-results.json  test-setup.md  tsconfig.json  vercel.json  vitest.config.ts
apps/sandbox/: Dockerfile  README.md  pyproject.toml
apps/sandbox/src/sandbox/core/: diff_engine.py  llm_client.py  prompt_builder.py
apps/sandbox/src/sandbox/test_doubles/: fake_llm.py
apps/sandbox/tests/: test_diff_engine.py  test_llm_client.py  test_prompt_builder.py
apps/web/: .env.production  README.md  package.json
apps/web/src/: App.tsx
convex/: README.md
convex/_generated/: api.d.ts
convex/features/: agent.ts
convex/tables/: agentMessages.ts  agentThreads.ts  blocks.ts  comments.ts  projectMembers.ts  projects.ts  sections.ts  users.ts
convex/tests/: agent.test.ts  editing.test.ts  locking.test.ts  versions.test.ts
docs/: AgentMarkdownEditor_PRD_v0_4.md  README.md  TASK_BREAKDOWN.md  convex-llms-full.txt  daytona-cli-llms.txt  daytona-getting-started.md  daytona-llms-full.txt  daytona-llms.txt
playwright-results/: results.json
playwright-results/html/: index.html
scripts/: build-frontend.sh  deploy-convex.sh  deploy-sandbox.sh  deploy-to-sandbox.sh  deploy_sandbox_app.py  sandbox-deploy-manual.md  upload_to_sandbox.py
tests/e2e/: README.md
tests/e2e/fixtures/: auth.ts  (+1 more)
tests/integration/: README.md
tests/utils/: convexTestClient.ts  seedData.ts  testHelpers.ts
(+17 files in other folders)
